--- a/BaseMVC7/appsettings.json
+++ b/BaseMVC7/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=(localdb)\\mssqllocaldb;Database=BaseMVC7;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
